--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
             /* Ensure container respects parent height */
         }
 
-        #santa-svg {
+        #santa-svg,
+        #character-img {
             width: auto;
             height: auto;
             max-height: 50vh;
@@ -723,19 +724,24 @@
             #controls-view {
                 flex: 30;
                 /* Smaller controls */
-                padding-bottom: 5px;
+                padding-bottom: 2px;
+                /* Reduced padding */
                 display: flex;
                 align-items: center;
                 /* Center vertically */
+                overflow: hidden;
+                /* Prevent scroll */
             }
 
             .controls-grid {
-                padding: 2px 10px;
+                padding: 0 10px;
+                /* Remove vertical padding */
                 gap: 5px;
                 /* Tighter gap */
-                transform: scale(0.95);
-                /* Slight scale down to be safe */
+                transform: scale(0.85);
+                /* Scale down more to prevent cutoff */
                 transform-origin: center center;
+                max-height: 100%;
             }
 
             #santa-svg,
@@ -743,6 +749,8 @@
                 max-height: 50vh !important;
                 /* More space available */
                 max-width: 200px !important;
+                animation: santa-breathe 3s ease-in-out infinite;
+                /* Ensure animation on both */
             }
 
             #bubble {
