--- a/index.html
+++ b/index.html
@@ -1705,7 +1705,36 @@
                     btn.addEventListener('touchstart', handler);
                     btn.addEventListener('click', handler);
                 });
+                return;
             }
+
+            // Handle color and shape modes
+            const modeConfig = GAME_MODES[state.currentMode];
+            if (!modeConfig || !modeConfig.items) return;
+
+            modeConfig.items.forEach(itemName => {
+                const btn = document.createElement('button');
+                btn.className = 'control-btn';
+
+                let content = '';
+                if (state.currentMode === 'color') {
+                    const colorInfo = modeConfig.display[itemName];
+                    content = `<div style="width: 60px; height: 60px; border-radius: 50%; background-color: ${colorInfo.color}; box-shadow: 0 5px 15px rgba(0,0,0,0.2);"></div>`;
+                } else if (state.currentMode === 'shape') {
+                    const shapeInfo = modeConfig.display[itemName];
+                    content = createShapeSVG(shapeInfo.shape, shapeInfo.color);
+                }
+
+                btn.innerHTML = `<div class="control-content">${content}</div>`;
+
+                const handler = (e) => {
+                    e.preventDefault();
+                    handleInput(itemName);
+                };
+                btn.addEventListener('touchstart', handler);
+                btn.addEventListener('click', handler);
+                grid.appendChild(btn);
+            });
         }
 
         function createChimneySVG(color) {
