Fix critical bug: Add updateControls() call after sequence playback to show control buttons

--- a/index.html
+++ b/index.html
@@ -2028,6 +2028,7 @@
                     setStatus("Your Turn!");
                     toggleTurnSignal(true); // Green light on
                     ui.bubble.classList.remove('show');
+                    updateControls(); // Show the control buttons!
                     return;
                 }
 
