--- a/index.html
+++ b/index.html
@@ -1704,6 +1704,7 @@
                     };
                     btn.addEventListener('touchstart', handler);
                     btn.addEventListener('click', handler);
+                    grid.appendChild(btn); // CRITICAL: Add button to grid!
                 });
                 return;
             }
