--- a/index.html
+++ b/index.html
@@ -1678,10 +1678,22 @@
             }
 
             if (state.currentMode === 'fishing') {
+                console.log('Fishing mode activated');
+                console.log('Grid exists:', grid);
+                console.log('Grid class:', grid.className);
+                console.log('Player input index:', state.playerInputIndex);
+                console.log('Sequence:', state.sequence);
+
                 ui.controlsView.classList.add('water-bg');
                 grid.className = 'controls-grid grid-6'; // Use grid-6 for fishing
 
                 const currentTarget = state.sequence[state.playerInputIndex];
+                if (!currentTarget) {
+                    console.error('No current target found!');
+                    return;
+                }
+                console.log('Current target:', currentTarget);
+
                 const allItems = GAME_MODES.fishing.items;
 
                 // Filter out correct item to pick distractors
@@ -1691,7 +1703,10 @@
                 // Combine and shuffle
                 const displayItems = [currentTarget, ...selectedDistractors].sort(() => 0.5 - Math.random());
 
-                displayItems.forEach(item => {
+                console.log('Display items:', displayItems);
+                console.log('Creating buttons...');
+
+                displayItems.forEach((item, index) => {
                     const btn = document.createElement('button');
                     btn.className = 'control-btn fish-item'; // Add fish animation
                     btn.setAttribute('data-item', item.name); // Add data-item for consistency
@@ -1705,7 +1720,11 @@
                     btn.addEventListener('touchstart', handler);
                     btn.addEventListener('click', handler);
                     grid.appendChild(btn); // CRITICAL: Add button to grid!
+                    console.log(`Button ${index + 1} added:`, item.name);
                 });
+
+                console.log('Grid children count:', grid.children.length);
+                console.log('Grid innerHTML length:', grid.innerHTML.length);
                 return;
             }
 
