Remove inline font-size from fishing buttons to allow CSS class control

--- a/index.html
+++ b/index.html
@@ -1725,7 +1725,7 @@
                     btn.className = 'control-btn fish-item'; // Add fish animation
                     btn.setAttribute('data-item', item.name); // Add data-item for consistency
                     btn.setAttribute('data-type', 'fishing'); // Add data-type for consistency
-                    btn.innerHTML = `<div class="control-content"><div style="font-size: 4rem;" class="animal-emoji">${item.emoji}</div></div>`;
+                    btn.innerHTML = `<div class="control-content"><div class="animal-emoji">${item.emoji}</div></div>`;
 
                     const handler = (e) => {
                         e.preventDefault();
