Force emoji size with specific selector and transform scale

--- a/index.html
+++ b/index.html
@@ -740,12 +740,14 @@
             /* Container style if needed */
         }
 
-        .animal-emoji {
+        .controls-grid .control-btn .animal-emoji {
             font-size: 8rem !important;
             line-height: 1;
             display: inline-block !important;
             visibility: visible !important;
             opacity: 1 !important;
+            transform: scale(1.5);
+            /* Extra boost */
         }
 
         #level-complete-container {
