Explicitly target .fish-item .animal-emoji for font size and scale

--- a/index.html
+++ b/index.html
@@ -740,7 +740,8 @@
             /* Container style if needed */
         }
 
-        .controls-grid .control-btn .animal-emoji {
+        .controls-grid .control-btn .animal-emoji,
+        .controls-grid .fish-item .animal-emoji {
             font-size: 8rem !important;
             line-height: 1;
             display: inline-block !important;
