--- a/index.html
+++ b/index.html
@@ -1595,8 +1595,61 @@
             versionDisplay.style.color = 'rgba(255,255,255,0.5)';
             versionDisplay.style.fontSize = '12px';
             versionDisplay.style.zIndex = '9999';
-            versionDisplay.textContent = 'v44.0';
+            versionDisplay.textContent = 'v46.0';
             document.body.appendChild(versionDisplay);
+
+            // Add On-Screen Debug Console
+            const debugConsole = document.createElement('div');
+            debugConsole.id = 'debug-console';
+            debugConsole.style.position = 'fixed';
+            debugConsole.style.top = '0';
+            debugConsole.style.left = '0';
+            debugConsole.style.width = '100%';
+            debugConsole.style.height = '150px';
+            debugConsole.style.backgroundColor = 'rgba(0,0,0,0.7)';
+            debugConsole.style.color = '#0f0';
+            debugConsole.style.fontSize = '10px';
+            debugConsole.style.overflowY = 'scroll';
+            debugConsole.style.zIndex = '10000';
+            debugConsole.style.pointerEvents = 'none'; // Let clicks pass through
+            debugConsole.style.display = 'none'; // Hidden by default, toggle with triple click
+            document.body.appendChild(debugConsole);
+
+            // Override console.log
+            const originalLog = console.log;
+            const originalError = console.error;
+
+            function logToScreen(msg, type = 'log') {
+                const line = document.createElement('div');
+                line.textContent = `[${type}] ${msg}`;
+                if (type === 'error') line.style.color = '#f00';
+                debugConsole.appendChild(line);
+                debugConsole.scrollTop = debugConsole.scrollHeight;
+            }
+
+            console.log = function (...args) {
+                originalLog.apply(console, args);
+                logToScreen(args.map(a => typeof a === 'object' ? JSON.stringify(a) : String(a)).join(' '));
+            };
+
+            console.error = function (...args) {
+                originalError.apply(console, args);
+                logToScreen(args.map(a => typeof a === 'object' ? JSON.stringify(a) : String(a)).join(' '), 'error');
+            };
+
+            // Toggle debug console on triple click on version display
+            let clickCount = 0;
+            versionDisplay.addEventListener('click', () => {
+                clickCount++;
+                if (clickCount === 3) {
+                    debugConsole.style.display = debugConsole.style.display === 'none' ? 'block' : 'none';
+                    clickCount = 0;
+                }
+                setTimeout(() => clickCount = 0, 1000);
+            });
+
+            // Force show debug console for now
+            debugConsole.style.display = 'block';
 
             createSnow();
             achievements.load();
@@ -1672,6 +1725,7 @@
         }
 
         function updateControls() { // Renamed from createControls, now takes no arguments
+            console.log('updateControls called. Mode:', state.currentMode);
             ui.controlsView.innerHTML = '';
 
             // Ensure controls-grid exists for modes that use it, or create it if not
@@ -1694,7 +1748,7 @@
             }
 
             if (state.currentMode === 'fishing') {
-                console.log('Fishing mode activated');
+                console.log('Fishing mode activated in updateControls');
                 console.log('Grid exists:', grid);
                 console.log('Grid class:', grid.className);
                 console.log('Player input index:', state.playerInputIndex);
@@ -1711,6 +1765,7 @@
                     <div class="bubbles" style="position: absolute; bottom: 0; width: 100%; height: 50px; pointer-events: none;"></div>
                 `;
                 ui.controlsView.appendChild(rod);
+                console.log('Fishing rod added');
 
                 const currentTarget = state.sequence[state.playerInputIndex];
                 if (!currentTarget) {
